bug fixes on mobile navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,9 @@ h6 {
 }
 
 #header .logo {
-  font-size: 28px;
+  font-size: 25px;
   margin: 0;
-  padding: 10px;
+  padding: 0px;
   line-height: 1;
   font-weight: 700;
   letter-spacing: 1px;
